--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="card text-center">
-    <h2>Login - Here</h2>
+    <h2>Login</h2>
     <form action="/login" method="POST">
       <div class="mb-3">
         <input type="text" name="username" class="form-control" placeholder="Username" required>
